--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Question Screen -->
   <div class="question hide">
       <div class="header">
-          <h2>Question text here</h2>
+          <h2 id="question-text">Question text here</h2>
       </div>
       <img id="question-image" src="assets/images/placeholder.png" alt="Question Illustration">
       <div class="options"></div>
