--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./app.css">
   <title>Quizzy Math Kids</title>
+  <!-- Lottie player -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
 
@@ -83,6 +85,9 @@
   </div>
 
   <div class="notify"></div>
+
+  <!-- Celebration sound -->
+  <audio id="celebration-sound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c4cb06ec36.mp3" preload="auto"></audio>
 
   <script src="./app.js"></script>
 </body>
