--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 
   <div class="notify"></div>
 
+  <!-- Background Music -->
+  <audio id="bg-music" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_f573ac229d.mp3" loop preload="auto"></audio>
+
   <!-- Celebration sound -->
   <audio id="celebration-sound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c4cb06ec36.mp3" preload="auto"></audio>
 
