--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
         <button class="start-btn" id="start-hi">चलो शुरू करें</button>
       </div>
 
-      <!-- Music toggle -->
       <div class="small-note">
         <label><input type="checkbox" id="musicToggle" checked> Background music</label>
       </div>
     </div>
 
     <div class="splash-footer">
-      <p>This app is developed by teacher Bhaskar Joshi | Email: bhaskarjoshi2024@gmail.com</p>
+      <p>Created by Bhaskar Joshi | Email: bhaskarjoshi2024@gmail.com</p>
     </div>
   </div>
 
@@ -54,7 +53,7 @@
 
     <div class="controls">
       <label for="totalQuestions">Number of Questions:</label>
-      <input type="number" id="totalQuestions" value="10" min="1" max="50">
+      <input type="number" id="totalQuestions" value="20" min="1" max="50">
     </div>
 
     <div class="start-footer">
@@ -78,6 +77,7 @@
 
     <div class="footer">
       <button type="button" id="next-btn" disabled>Next Question</button>
+      <button type="button" id="back-btn">Back to Splash</button>
     </div>
   </section>
 
@@ -98,10 +98,10 @@
 
   <div class="notify" id="notify" aria-live="polite"></div>
 
-  <!-- Audio file in root -->
+  <!-- Audio files in root -->
   <audio id="bg-music" loop preload="auto" src="bg.mp3"></audio>
-  <audio id="sound-correct" preload="auto" src="assets/sounds/correct.mp3"></audio>
-  <audio id="sound-wrong" preload="auto" src="assets/sounds/wrong.mp3"></audio>
+  <audio id="sound-correct" preload="auto" src="correct.mp3"></audio>
+  <audio id="sound-wrong" preload="auto" src="wrong.mp3"></audio>
 
   <script src="./app.js"></script>
 </body>
