--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="splash-footer">
-      <p>Created by Bhaskar Joshi | Email: bhaskarjoshi2024@gmail.com</p>
+      <p>Created by teacher Bhaskar Joshi | Email: bhaskarjoshi2024@gmail.com</p>
     </div>
   </div>
 
@@ -71,13 +71,12 @@
       </div>
     </header>
 
-    <img id="question-image" src="image1.png" alt="Question Illustration">
+    <img id="question-image" src="placeholder.png" alt="Question Illustration">
 
     <div class="options" id="options"></div>
 
     <div class="footer">
       <button type="button" id="next-btn" disabled>Next Question</button>
-      <button type="button" id="back-btn">Back to Splash</button>
     </div>
   </section>
 
@@ -98,7 +97,7 @@
 
   <div class="notify" id="notify" aria-live="polite"></div>
 
-  <!-- Audio files in root -->
+  <!-- Audio -->
   <audio id="bg-music" loop preload="auto" src="bg.mp3"></audio>
   <audio id="sound-correct" preload="auto" src="correct.mp3"></audio>
   <audio id="sound-wrong" preload="auto" src="wrong.mp3"></audio>
